<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maxsonar</name>
  <version>0.1.0</version>
  <description>ROS2 Node to read the I2CXL-MaxSonar®- EZTM Series High Performance Sonar Rangefinder MB1202, MB1212, MB1222, MB1232, MB1242 and publish distance readings</description>
  <maintainer email="eslaghuis@gmail.com">eslaghuis</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
